--- a/data-analysis/data-analysis.Rmd
+++ b/data-analysis/data-analysis.Rmd
@@ -35,7 +35,7 @@ Creating the sample that we will perform the following analysis on:
 
 ```{r abnb_sample}
 set.seed(111519)
-abnb_sample <- sample_n(abnb, 50)
+abnb_sample <- sample_n(abnb, 4000)
 ```
 
 Constructing a bootstrap distribution for the median price of Airbnbs in NYC:
@@ -54,7 +54,7 @@ Creating a 95% bootstrap confidence interval for the the median price of Airbnbs
 (ci_bounds <- get_ci(boot_dist_median_price, level= 0.95))
 ```
 
-We are 95% confident that the population median price per night of Airbnbs in NYC is between $97.50 and $147.51.
+We are 95% confident that the population median price per night of Airbnbs in NYC is between $100.00 and $110.00.
 
 Creating a visualizaing of the bootstrap distribution for median price:
 
@@ -92,21 +92,21 @@ lm_price_borough %>%
 
 The linear model is:
 
-`price-hat = 180.333 -63.000*(neighbourhood_groupBrooklyn) -80.333*(neighbourhood_groupStaten Island) -71.667*(neighbourhood_groupQueens) -125.333(neighbourhood_groupBronx)`
+`price-hat = 206.848 -85.106*(neighbourhood_groupBrooklyn) -117.674*(neighbourhood_groupStaten Island) -110.432*(neighbourhood_groupQueens) -126.213(neighbourhood_groupBronx)`
 
 Intepreting the intercept:
 
-Given that the Airbnb is in Manhattan the expected price, on average, is $180.33. In this case, the intercept does have a meaningful interpretation because an Airbnb could be $180.33 per night.
+Given that the Airbnb is in Manhattan the expected price, on average, is $206.85. In this case, the intercept does have a meaningful interpretation because an Airbnb could be $206.85 per night.
 
 Interpreting the slopes using lm_price_borough linear model:
 
-For an Airbnb in Brooklyn, the average price is expected, on average, to be $63.00 less than an Airbnb in Manhattan, holding all else constant.
+For an Airbnb in Brooklyn, the average price is expected, on average, to be $85.11 less than an Airbnb in Manhattan, holding all else constant.
 
-For an Airbnb in Staten Island, the average price is expected, on average, to be $80.33 less than an Airbnb in Manhattan, holding all else constant.
+For an Airbnb in Staten Island, the average price is expected, on average, to be $117.67 less than an Airbnb in Manhattan, holding all else constant.
 
-For an Airbnb in Queens, the average price is expected, on average, to be $71.66 less than an Airbnb in Manhattan, holding all else constant.
+For an Airbnb in Queens, the average price is expected, on average, to be $110.43 less than an Airbnb in Manhattan, holding all else constant.
 
-For an Airbnb in Bronx, the average price is expected, on average, to be $125.33 less than an Airbnb in Manhattan, holding all else constant.
+For an Airbnb in Bronx, the average price is expected, on average, to be $126.21 less than an Airbnb in Manhattan, holding all else constant.
 
 ### Part C
 
@@ -123,7 +123,7 @@ abnb_sample_filtered %>%
   summarise(med_price = median(price))
 ```
 
-The observed median prices for Manhattan and Brooklyn are $148.00 and $92.50, respectively. Therefore, the observed difference in median prices is $55.50.
+The observed median prices for Manhattan and Brooklyn are $150.00 and $90.00, respectively. Therefore, the observed difference in median prices is $60.
 
 Null Hypothesis: There is no difference in median price between Manhattan and Brooklyn Airbnb per night.
 
@@ -144,25 +144,21 @@ Visualizing the null distribution.
 ```{r null_dist_diff_median_vis}
 visualize(null_dist_man_brook_med_price) + 
   labs(title = "Null Dist of Difference in Median Price between Manhattan and Brooklyn") +
-  shade_p_value(obs_stat = 55.5, direction = "two_sided")
+  shade_p_value(obs_stat = 60, direction = "two_sided")
 ```
 
 Findng the p-value.
 
 ```{r null_dist_diff_median_p_val}
-get_p_value(null_dist_man_brook_med_price, 55.5, direction = "two_sided")
+get_p_value(null_dist_man_brook_med_price, 60, direction = "two_sided")
 ```
 
-The p-value is 0.116 which is greater than the significance value of 0.05. Therefore, we fail to reject the null hypothesis in favor of the alternative hypothesis. The data does not provide convincing evidence of a difference in median price of Airbnbs for listings in Manhattan and Brooklyn.
+The p-value is 0 which is less than the significance value of 0.05. Therefore, we reject the null hypothesis that there is no difference in median price between Manhattan and Brooklyn Airbnb per night. We can conclude that the data does provide convincing evidence of a difference in median price of Airbnbs for listings in Manhattan and Brooklyn.
 
 ### Part D
 
-```{r}
-abnb_sample_plot <- sample_n(abnb, 5000)
-```
-
 ```{r median_price-mutate}
-abnb_sample_plot <- abnb_sample_plot %>%
+abnb_sample <- abnb_sample %>%
    mutate(price_median = median(price), 
           price_case = case_when(
       price >= price_median ~ "Median or Above",
@@ -171,14 +167,14 @@ abnb_sample_plot <- abnb_sample_plot %>%
 ```
 
 ```{r price-at-location}
-abnb_sample_plot %>%
+abnb_sample %>%
   ggplot(mapping = aes (x = longitude, y = latitude, color = price_case)) +
   geom_jitter(alpha = 0.5) +
   labs(title = "Prices at Latitude and Longitude Coordinates", x = "Longitude", y = "Latitude", color = "Price Case")
 ```
 
 ```{r}
-abnb_sample_plot %>%
+abnb_sample %>%
   count(neighbourhood_group, price_case) %>%
   group_by(neighbourhood_group) %>%
   mutate(rel_freq = n/sum(n)) %>%
@@ -243,15 +239,15 @@ lm_avail_room_type %>%
 
 The linear model is:
 
-`price-hat = 121.067 -38.678*(room_typePrivateroom) +25.433*(room_typeShared room)`
+`price-hat = 115.774 -3.443*(room_typePrivateroom) +74.912*(room_typeShared room)`
 
 Intepreting the intercept:
 
-Given that the Airbnb has the roomtype of entire house/apt the expected availability, on average, is 121 days out of the year. In this case, the intercept does have a meaningful interpretation because an Airbnb could be available for 121 days out of 365 per year.
+Given that the Airbnb has the roomtype of entire house/apt the expected availability, on average, is 115.8 days out of the year. In this case, the intercept does have a meaningful interpretation because an Airbnb could be available for 121 days out of 365 per year.
 
 Interpreting the slopes using lm_avail_room_type linear model:
 
-For an Airbnb with roomtype of private room, the average availability is expected, on average, to be 38.68 days less per year than an Airbnb in wth room type of entire house/apt, holding all else constant.
+For an Airbnb with roomtype of private room, the average availability is expected, on average, to be 3.4 days less per year than an Airbnb in wth room type of entire house/apt, holding all else constant.
 
-For an Airbnb with roomtype of shared room, the average availability is expected, on average, to be 25.43 days more per year than an Airbnb in wth room type of entire house/apt, holding all else constant.
+For an Airbnb with roomtype of shared room, the average availability is expected, on average, to be 74.9 days more per year than an Airbnb in wth room type of entire house/apt, holding all else constant.
 
