--- a/data-analysis/data-analysis.Rmd
+++ b/data-analysis/data-analysis.Rmd
@@ -251,3 +251,10 @@ For an Airbnb with roomtype of private room, the average availability is expecte
 
 For an Airbnb with roomtype of shared room, the average availability is expected, on average, to be 74.9 days more per year than an Airbnb in wth room type of entire house/apt, holding all else constant.
 
+***
+TO DO:
+1. Add R squared for models we have
+2. Bootstrap Distribution, Visualization, CI for Availability
+3. Evertything (Room Type, Min Night, Number of Reviews, Calculated Host Listing, price_case, Reviews per month) AIC Model Selection for Availability — R squared and AIC Values
+4. Host high volume or low volume
+***
