--- a/data-analysis/data-analysis.Rmd
+++ b/data-analysis/data-analysis.Rmd
@@ -286,6 +286,17 @@ For an Airbnb with roomtype of private room, the average availability is expecte
 
 For an Airbnb with roomtype of shared room, the average availability is expected, on average, to be 74.9 days more per year than an Airbnb in wth room type of entire house/apt, holding all else constant.
 
+
+We are now going to add R^2 to our linear model above.
+
+```{r rsqaure-lm_avail_room_typex}
+glance(lm_avail_room_type)$r.squared
+```
+
+This means that roughly 0.841% of the variability in average availiability can be explained by the type of room of Airbnb in New York.
+
+
+
 Constructing a bootstrap distribution for the median number of available days of Airbnbs in NYC:
 
 ```{r avail_boot_distribution_h}
