Added R^2 and interpretation to neighboorhood type + price

--- a/data-analysis/data-analysis.Rmd
+++ b/data-analysis/data-analysis.Rmd
@@ -108,6 +108,14 @@ For an Airbnb in Queens, the average price is expected, on average, to be $110.4
 
 For an Airbnb in Bronx, the average price is expected, on average, to be $126.21 less than an Airbnb in Manhattan, holding all else constant.
 
+We are now going to add R^2 to our linear model above.
+
+```{r rsqaure-lm_price_borough}
+glance(lm_price_borough)$r.squared
+```
+
+This means that roughly 3.670% of the variability in average price can be explained by the neighborhood type of Airbnbs in New York City.
+
 ### Part C
 
 We are suspicious that there might be a relationship between median price in Manhattan and Brooklyn because they contain the largest amount and the most expensive Airbnbs. Therefore we will attempt to answer the following: Is there is a difference in the true median prices between Manhattan and Brooklyn?
