--- a/data-analysis/data-analysis.Rmd
+++ b/data-analysis/data-analysis.Rmd
@@ -1,11 +1,13 @@
 ---
-title: "NYC Airbnnb Popularity Factors"
+title: "NYC Airbnb Popularity Factors"
 author: "WORLD"
 date: "12/15/2019"
 output: github_document
 ---
     
-### Load packages & data 
+### Load packages & data
+
+Loaded the following packages that will be needed to perform analysis:
 
 ```{r load-packages, message=FALSE}
 library(tidyverse) 
@@ -15,6 +17,8 @@ library(dplyr)
 library(knitr)
 library(broom)
 library(tidytext)
+library(OpenStreetMap)
+library(ggplot2)
 ```
 
 Uploaded the Airbnb data set from Kaggle via a csv file:
@@ -23,22 +27,22 @@ Uploaded the Airbnb data set from Kaggle via a csv file:
 abnb <- read_csv("AB_NYC_2019.csv")
 ```
 
-Assuming that the data we have for Airbnbs in New York City represents the population. In order to perform the following analysis we used sample_n to randomly select 31 sample observations.
+We are assuming that the data we have for Airbnbs in New York City represents the population given that there are 48,895 observations. Additionally, we concsulted Dr. Tackett and she thinks that the data was most likely web scapped from the Airbnb website. 
 
-In part I, the following research question will be examined: How does location (borough and neighborhood, for example) influence the price of a listing?
-
-In part II, the following research question will be examined: How does the way in which a property is listed (type of room, for example) influence the availability of a listing?
-
-### Part A
-
-Creating the sample that we will perform the following analysis on:
+Therefore, in order to perform analysis, we used created a sample set called abnb_sample of 4000 randomly selected observations.
 
 ```{r abnb_sample}
 set.seed(111519)
 abnb_sample <- sample_n(abnb, 4000)
 ```
 
-Constructing a bootstrap distribution for the median price of Airbnbs in NYC:
+### Part I
+
+In part I, the following research question will be examined: How does location (borough and neighborhood, for example) influence the price of a listing?
+
+### Part A
+
+To start, a bootsrap distribution was constructed for the median price of Airbnbs in NYC. This will help to better understand the range of prices and the real estate landscape that the true median price would be within.
 
 ```{r diff_med_income_boot_dist}
 set.seed(111519)
@@ -54,7 +58,6 @@ Creating a 95% bootstrap confidence interval for the the median price of Airbnbs
 (ci_bounds <- get_ci(boot_dist_median_price, level= 0.95))
 ```
 
-We are 95% confident that the population median price per night of Airbnbs in NYC is between $100.00 and $110.00.
 
 Creating a visualizaing of the bootstrap distribution for median price:
 
@@ -64,7 +67,48 @@ visualize(boot_dist_median_price) +
   shade_ci(ci_bounds)
 ```
 
+As depicted in the output and visualization, we are 95% confident that the population median price per night of Airbnbs in NYC is between $100.00 and $110.00.
+
 ### Part B
+
+Creating a histogram that displays number of listings by neighborhood borough in New York City:
+
+```{r visualization-univariate}
+ggplot(data = abnb, mapping = aes(x = neighbourhood_group)) +
+  geom_histogram(stat = "count") + 
+  labs(title = "Listings by Borough", x = "Borough", y = "Count")
+```
+
+Manhattan and Brooklyn dominate the number of listings on Airbnb in New York City. More specifically, there is roughly 20,000 listings in Brooklyn and slightly more than 20,000 listings in Manhattan. The Queens borough follows after with roughly 5,000 listings, followed by Bronx and Staten Island with fewer than 1,100 listings each.
+
+Creating summary statistics that will count the number of listings in each neighborhood group:
+
+```{r neighbourhood_group-count}
+abnb %>%
+  count(neighbourhood_group) %>%
+  arrange(desc(n))
+```
+
+Manhattan has the most listings at 21,661 followed by Brooklyn at 20,104 listings, followed by Queens at 5,666, Bronx at 1,091, and Staten Island last at only 373 listings.
+
+Creating summary statistics that displays the median and IQR price of each neighborhood group.
+
+```{r summarise-price}
+abnb %>%
+  group_by(neighbourhood_group) %>%
+  summarise(
+    med_price = median(price), 
+    IQR_price = IQR(price)
+    ) %>%
+  arrange(desc(med_price)) %>%
+  head(5)
+```
+
+Manhattan has the highest median price at 150 followed by Brooklyn at 90, Queens and Staten Island at 75, and Bronx last at 65. 
+
+Create a linear model to describe how boroughs influence price. Borough is one of the main location classifiers we will use to see if there is a relationship between location and price.
+
+Since Manhattan had the largest volume of Airbnbs and the highest median price, that will be the baseline for comparison with other boroughs.
 
 Using fct_relevel to make Manhattan the baseline level for neighbourhood_group:
 
@@ -108,7 +152,7 @@ For an Airbnb in Queens, the average price is expected, on average, to be $110.4
 
 For an Airbnb in Bronx, the average price is expected, on average, to be $126.21 less than an Airbnb in Manhattan, holding all else constant.
 
-We are now going to add R^2 to our linear model above.
+We are now going to add R squared to our linear model above.
 
 ```{r rsqaure-lm_price_borough}
 glance(lm_price_borough)$r.squared
@@ -120,10 +164,14 @@ This means that roughly 3.670% of the variability in average price can be explai
 
 We are suspicious that there might be a relationship between median price in Manhattan and Brooklyn because they contain the largest amount and the most expensive Airbnbs. Therefore we will attempt to answer the following: Is there is a difference in the true median prices between Manhattan and Brooklyn?
 
+To start, abnb_sample was filtered to just include Manhattan and Brooklyn, which was saved to abnb_sample_filtered.
+
 ```{r filter-borough}
 abnb_sample_filtered <- abnb_sample %>%
   filter(neighbourhood_group == "Manhattan" | neighbourhood_group == "Brooklyn")
 ```
+
+Using the abnb_sample_filtered data frame, the observed sample median prices for Manhattand and Brooklyn were found.
 
 ```{r sample_diff_med}
 abnb_sample_filtered %>%
@@ -132,6 +180,8 @@ abnb_sample_filtered %>%
 ```
 
 The observed median prices for Manhattan and Brooklyn are $150.00 and $90.00, respectively. Therefore, the observed difference in median prices is $60.
+
+With this observed difference a hypothesis test was conducted:
 
 Null Hypothesis: There is no difference in median price between Manhattan and Brooklyn Airbnb per night.
 
@@ -149,66 +199,20 @@ null_dist_man_brook_med_price <- abnb_sample_filtered %>%
 
 Visualizing the null distribution.
 
-```{r null_dist_diff_median_vis}
+```{r null_dist_diff_median_vis, warning=FALSE}
 visualize(null_dist_man_brook_med_price) + 
   labs(title = "Null Dist of Difference in Median Price between Manhattan and Brooklyn") +
   shade_p_value(obs_stat = 60, direction = "two_sided")
 ```
 
-Findng the p-value.
+From the visualization, there appears to be no overlap between the shaded region and the null distribution. A p-value was found to confirm this:
 
 ```{r null_dist_diff_median_p_val}
 get_p_value(null_dist_man_brook_med_price, 60, direction = "two_sided")
 ```
 
-The p-value is 0 which is less than the significance value of 0.05. Therefore, we reject the null hypothesis that there is no difference in median price between Manhattan and Brooklyn Airbnb per night. We can conclude that the data does provide convincing evidence of a difference in median price of Airbnbs for listings in Manhattan and Brooklyn.
-
-### Part XX
-
-We concluded in the previous part that our data does provide convincing evidence of a difference in true median price of Airbnbs for listing in Manhattan and Brooklyn. But, if we look closely at the median price listings of Staten Island's Airbnbs and Queen's Airbnbs, we see that there are similar. Let's perform a hypothesis test on these two neighborhood groups to attempt to answer the following: Is there is a difference in the true median prices between Staten Island and Queens?
-
-```{r filter-staten-queens}
-abnb_staten <- abnb_sample %>%
-  filter(neighbourhood_group == "Staten Island" | neighbourhood_group == "Queens")
-```
-
-```{r sample_diff_med_staten_queens}
-abnb_staten %>%
-  group_by(neighbourhood_group) %>%
-  summarise(med_price = median(price))
-```
-
-The observed median prices for Staten Island and Queens are $65 and $72, respectively. Therefore, the observed difference in median prices is $7.
-
-Null Hypothesis: There is no difference in median price between Staten Island and Queens Airbnb per night.
-
-Alternative Hypothesis: There is a difference in median price between Staten Island and Queens Airbnb per night.
-
-```{r staten-queens-med-price}
-set.seed(111519)
-null_dist_staten_queens_med_price <- abnb_staten %>%
-  specify(response = price, explanatory = neighbourhood_group) %>%
-  hypothesize(null = "independence") %>%
-  generate(reps = 1000, type = "permute") %>%
-  calculate(stat = "diff in medians", order = c("Staten Island", "Queens"))
-
-```
-
-Visualizing the null distribution.
-
-```{r null_dist_diff_median_vis_staten_queens}
-visualize(null_dist_staten_queens_med_price) + 
-  labs(title = "Null Dist of Difference in Median Price between Staten Island and Queens") +
-  shade_p_value(obs_stat = -7, direction = "two_sided")
-```
-
-Findng the p-value.
-
-```{r null_dist_diff_median_p_val_staten_queens}
-get_p_value(null_dist_staten_queens_med_price, -7, direction = "two_sided")
-```
-
-The p-value is 0.488 which is less than our alpha level of 0.05. Because the p-value is less than our alpha level, we have enough convincing evidence to reject the null hypothesis and conclude that there is a true median price difference in listings between Staten Island and Queens. However, keep in mind, that our p-value was very close to 0.05. If we set our predetermined alpha level to anything below 0.488, we would had failed to reject our null hypothesis.
+As expected, the p-value is 0, which is less than the significance value of 0.05. 
+Therefore, we reject the null hypothesis that there is no difference in median price between Manhattan and Brooklyn Airbnb per night. We can conclude that the data does provide convincing evidence of a difference in median price of Airbnbs for listings in Manhattan and Brooklyn.
 
 ### Part D
 
@@ -243,6 +247,7 @@ abnb_sample %>%
 ```
 
 WANT TO SAY WHETHER PRICE IS DEPENDEDNT ON LOCATION OF BOROUGH!
+AIC for neighbouhoud!!!!
 
 ### Part E
 
@@ -256,6 +261,8 @@ abnb_sample %>%
 
 
 ### Part II
+
+In part II, the following research question will be examined: How does the way in which a property is listed (type of room, for example) influence the availability of a listing?
 
 Second research question: How does the way in which a property is listed (type of room, for example) influence the availability of a listing?
 
@@ -311,23 +318,13 @@ ggplot(frequency_all %>% top_n(10, freq) %>%
   coord_flip()
 ```
 
-```{r}
-tidy_description %>%
-  group_by(availability_365_case) %>%
-  count(word, sort = T) %>% 
-  filter(availability_365_case == "Low") %>%
-  arrange(desc(n)) %>%
-  head(10)
-```
-
-
 Creating a linear model to predict Airbnb availability by roomtype wth entire home/apt as be our baseline.
 
 ```{r lm-avail-room-type}
 lm_avail_room_type <- lm(availability_365 ~ room_type, data = abnb_sample)
 
 lm_avail_room_type %>% 
-  tidy() %>% 
+  tidy() %>%
   select(term, estimate) %>%
   kable(format = "markdown", digits =3)
 
@@ -356,7 +353,7 @@ glance(lm_avail_room_type)$r.squared
 
 This means that roughly 0.841% of the variability in average availiability can be explained by the type of room of Airbnb in New York.
 
-
+NOTE DISCREPENCY AND ADD EXPLORATORY
 
 Constructing a bootstrap distribution for the median number of available days of Airbnbs in NYC:
 
@@ -425,6 +422,12 @@ glance(selected_model)$r.squared
 ```
 
 The R-squared value is 10.49% of the variability in availibility can be explained by the way the property is listed - the room type, minimum nights required, number of reviews the listing has, the number of listings the host has, the median price and the reviews per month. 
+
+INTERPRET SLOPES 
+
+PART 3
+
+- lets add what it tells us about the renter - profile 
 
 Looking at the hosts by the number of listings they hold and classifying into "high volume" or "low volume":
 
@@ -527,3 +530,25 @@ TO DO:
 5. Hypothesis testing, visualization of p-value on the difference between Staten island and queens because they're so close to each other ---> Done (Brandon)
 6. I want to do more on the text analysis as I think this is a brilliant idea by Ellie/Drew and key to making our project stand out relative to others --- what if we do hypothesis testing on the true difference in price listing between the word "spacious" and "cozy" as these seem to be polar opposite descriptive words yet they are very common? ---> In Debate/Progress (Brandon)
 ***
+
+```{r}
+abnb_sample <- abnb_sample %>%
+  select(-(id))
+```
+
+```{r}
+abnb_test <- abnb_sample %>%
+  count(host_id) %>%
+  mutate(host_volume = if_else(n> 1, "high volume", "low volume"))
+```
+
+
+```{r}
+abnb_test <- abnb_test %>%
+  inner_join(abnb_sample, by = "host_id") %>%
+  arrange(desc(n))
+```
+
+
+
+AIC for everything price/availability
